--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,8 @@
 @theme inline {
     --color-background: var(--background);
     --color-foreground: var(--foreground);
+    --color-primary: var(--color-orange-600);
+    --color-secondary: var(--color-orange-200);
     --font-sans: var(--font-geist-sans);
     --font-mono: var(--font-geist-mono);
 }
@@ -23,4 +25,14 @@ body {
     background: var(--background);
     color: var(--foreground);
     font-family: var(--font-inter), sans-serif;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;       
+    width: 6px;
+    height: 30px;
+    border-radius: 3px;
+    background: var(--color-primary);
+    margin: 0px 3px;
 }
